--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <i class="fas fa-code fa-5x white"></i>
             <h2>Josué Morataya</h2>
             <p>Ciudad de Guatemala, Guatemala.</p>
-            <a href="https://x.com/JMoratayaA"><i class="fab fa-x"></i></a>
+            <a href="https://x.com/JMoratayaA"><i class="fab fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/jmoratayaa"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/josueitamar"><i class="fab fa-github"></i></a>
         </div>
