--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Me considero un estudiante constante de nuevas metodologías, orientadas a la mejora empresarial, tecnológicas disruptivas y tecnicas educativas. Pienso que todos debemos prácticar la humildad y así aprender lo mejor de otras personas, no importando quien. Estoy interesado en ofrecer mis conocimientos, con el fin de aportar positivamente a empresas y personas. Me apasiona la tecnología y la docencia, creo que la combinación de ambas disciplinas puede generar cambios de impacto positivo en la sociedad guatemalteca.</p>
+            <p>Me considero un estudiante constante en relación a nuevas metodologías orientadas a la mejora empresarial, tecnológicas disruptivas y tecnicas educativas. Pienso que todos debemos prácticar la humildad y así aprender lo mejor de otras personas, no importando quien. Estoy interesado en ofrecer mis conocimientos, con el fin de aportar positivamente a empresas y personas. Me apasiona la tecnología y la docencia, creo que la combinación de ambas disciplinas puede generar cambios de impacto positivo en la sociedad guatemalteca.</p>
             <h2>Experience</h2>
             <p>He desempeñado roles de gestión en el ambiente operativo del retail y por más de siete años he desarrollado experiencias en proyectos enfocados en la Seguridad de la Información y la Ciberseguridad de empresas del ámbito agrícola en Guatemala</p>
 
