--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Me considero un estudiante constante en relación a nuevas metodologías orientadas a la mejora empresarial, tecnológicas disruptivas y tecnicas educativas. Pienso que todos debemos prácticar la humildad y así aprender lo mejor de otras personas, no importando quien. Estoy interesado en ofrecer mis conocimientos, con el fin de aportar positivamente a empresas y personas. Me apasiona la tecnología y la docencia, creo que la combinación de ambas disciplinas puede generar cambios de impacto positivo en la sociedad guatemalteca.</p>
+            <p style="text-align: justify;">Me considero un estudiante constante en relación a nuevas metodologías orientadas a la mejora empresarial, tecnológicas disruptivas y tecnicas educativas. Pienso que todos debemos prácticar la humildad y así aprender lo mejor de otras personas, no importando quien. Estoy interesado en ofrecer mis conocimientos, con el fin de aportar positivamente a empresas y personas. Me apasiona la tecnología y la docencia, creo que la combinación de ambas disciplinas puede generar cambios de impacto positivo en la sociedad guatemalteca.</p>
             <h2>Experience</h2>
-            <p>He desempeñado roles de gestión en el ambiente operativo del retail y por más de siete años he desarrollado experiencias en proyectos enfocados en la Seguridad de la Información y la Ciberseguridad de empresas del ámbito agrícola en Guatemala</p>
+            <p style="text-align: justify;">He desempeñado roles de gestión en el ambiente operativo del retail y por más de siete años he desarrollado experiencias en proyectos enfocados en la Seguridad de la Información y la Ciberseguridad de empresas del ámbito agrícola en Guatemala</p>
 
             <h2>Skills</h2>
-            <p>Me considero una persona con habilidades de aprendizaje y compresión rápida, me destaco por mantener orden y planificar minuciosamente los proyectos bajo mi gestión.</p>
+            <p style="text-align: justify;">Me considero una persona con habilidades de aprendizaje y compresión rápida, me destaco por mantener orden y planificar minuciosamente los proyectos bajo mi gestión.</p>
             <h2>Projects</h2>
             <a href="#">Project 1</a>
             <a href="#">Project 2</a>
