--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="grid-2">
         <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
+            <i class="fas fa-shield-alt fa-5x white"></i>
             <h2>Josué Morataya</h2>
             <p>Ciudad de Guatemala, Guatemala.</p>
             <a href="https://x.com/JMoratayaA"><i class="fab fa-twitter"></i></a>
